--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,3 +14,6 @@ kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version.re
 kotlinx-io-bytestring = { module = "org.jetbrains.kotlinx:kotlinx-io-bytestring", version.ref = "kotlinx-io" }
 
 [bundles]
+
+
+[plugins]
